--- a/task0002/task0002_task06.html
+++ b/task0002/task0002_task06.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-        function ajax(){
-            var xhr=new XMLHttpRequest();
-            xhr.open('GET','./time.php')
-            xhr.send(null);
-            xhr.onreadystatechange=function(){
-                if(this.readyState===4){
-                    console.log(this);
-                }
+        function ajax(method, url, params, done) {
+            method = method.toUpperCase();
+            var pairs = [];
+            for (var key in params) {
+                pairs.push(key + "=" + params[key]);
             }
+            var querystring = pairs.join("&");
+            var xhr = window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject("Microsoft.XMLHTTP");
+            xhr.addEventListener("readystatechange", function () {
+                if (this.readyState !== 4) return;
+                try {
+                    done(JSON.parse(this.responseText))
+                } catch (e) {
+                    done(this.responseText)
+                }
+            })
+
+            if (method === "GET") {
+                url += "?" + querystring;
+            }
+
+            xhr.open(method, url);
+
+            var data = null;
+            if (method === "POST") {
+                xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+                data = querystring;
+            }
+            xhr.send(data);
         }
+
+
     </script>
 </body>
+
 </html>
