--- a/task0003/cheshi.html
+++ b/task0003/cheshi.html
@@ -33,21 +33,37 @@
 			</form>
 		</div>
 	</div>
+	<ul>2015-04-28<li data-id=1>to-do 1</li><li data-id=2>to-do 2</li></ul><ul>2015-04-29<li data-id=3>to-do 3</li><li data-id=4>to-do 4</li></ul><ul>2015-04-30<li data-id=5>to-do 5</li><li data-id=6>to-do 6</li></ul><ul>2015-05-04<li data-id=7>to-do 7</li></ul>
+
+	<ul></ul>
+	<li></li>
 
 	<script>
-		var res=new Array({0: Array({id: "1", second_id: "1", title: "to-do 1", time: "2015-04-28", content: "这是to-do1"},{id: "2", second_id: "1", title: "to-do 2", time: "2015-04-28", content: "这是to-do2"}), time: "2015-04-28"},{0: Array({id: "3", second_id: "1", title: "to-do 3", time: "2015-04-29", content: "这是to-do3"},{id: "4", second_id: "1", title: "to-do 4", time: "2015-04-29", content: "这是to-do4"}), time: "2015-04-29"})
+		//回调函数的代码
+		res=JSON.parse(res);
 		console.log(res);
+		var result="";
+		var result2="";
 
 		for (item in res) {
-			console.log(res[item]['time']);
+			result+="<ul>"+res[item]['time'];
+			result2="";
+			// console.log(res[item]['time']);
 			// console.log(res[item][0][0]);
 			// console.log(res[item][0][1]);
 			for (key in res[item][0]) {
-				console.log(res[item][0][key]);
-			}
+				result2+="<li data-id="+res[item][0][key]['id']+">"+res[item][0][key]['title']+"</li>";
 
+				// console.log(res[item][0][key]['title']);
+			}
+			result+=result2;
+			result+="</ul>";
 		}
 
+		document.getElementsByClassName("center-main")[0].innerHTML=result;
+
+		//测试用的代码
+		get('get','select_task.php',{haha:"i你好"},function(res){console.log(res)});
 	</script>
 </body>
 </html>
